force-app/main/default/objects/Question_Questionnaire__c/Question_Questionnaire__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - junction object</description>
    <label>Form Questionnaire</label>
    <nameField>
        <label>Question Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Questionnaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>