force-app/main/default/objects/Question_Questionnaire__c/fields/Allow_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to upload attachment.</description>
    <inlineHelpText>Allow user to upload attachment.</inlineHelpText>
    <label>Allow_Attachments</label>
    <type>Checkbox</type>
</CustomField>