force-app/main/default/objects/Question_Questionnaire__c/fields/Allow_Comment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to put comment.</description>
    <inlineHelpText>Allow user to put comment.</inlineHelpText>
    <label>Allow Comment</label>
    <type>Checkbox</type>
</CustomField>