force-app/main/default/objects/Question_Questionnaire__c/fields/Allow_Currency__c.field-meta.xml
<CustomField>
    <fullName>Allow_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin can define whether its number or a currency, in case of currency, user should be able to choose the currency symbol.</description>
    <label>Allow Currency</label>
    <type>Checkbox</type>
</CustomField>