force-app/main/default/objects/Question_Questionnaire__c/fields/background_Color__c.field-meta.xml
<CustomField>
    <fullName>background_Color__c</fullName>
    <description>Define the background color of information input .</description>
    <inlineHelpText>Define the background color of information input .</inlineHelpText>
    <label>background_Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>