force-app/main/default/objects/Question_Questionnaire__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Allow user to put comment.</description>
    <inlineHelpText>Allow user to put comment.</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>