force-app/main/default/objects/Question_Questionnaire__c/fields/Decimal_value__c.field-meta.xml
<CustomField>
    <fullName>Decimal_value__c</fullName>
    <description>Admin can define the number of the decimal to be allowed</description>
    <label>Decimal value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>