force-app/main/default/objects/Question_Questionnaire__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>Show the help text of questions.</description>
    <inlineHelpText>Show the help text of questions.</inlineHelpText>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>