force-app/main/default/objects/Question_Questionnaire__c/fields/Is_Allow_Branching__c.field-meta.xml
<CustomField>
    <fullName>Is_Allow_Branching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admin can allowing  branches for  question</description>
    <label>Is Allow Branching</label>
    <type>Checkbox</type>
</CustomField>