force-app/main/default/objects/Question_Questionnaire__c/fields/is_Delete__c.field-meta.xml
<CustomField>
    <fullName>is_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox will be checked when Question Questionnaire record  will be deleted.</description>
    <inlineHelpText>Checkbox will be checked when Question Questionnaire record  will be deleted.</inlineHelpText>
    <label>is Delete</label>
    <type>Checkbox</type>
</CustomField>