force-app/main/default/objects/Question_Questionnaire__c/fields/lookup_Object_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>lookup_Object_Field_Name__c</fullName>
    <description>Keep the object field name related to question.</description>
    <inlineHelpText>Keep the object field name related to question.</inlineHelpText>
    <label>lookup Object Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>