force-app/main/default/objects/Question_Questionnaire__c/fields/Max_Char_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Char_Length__c</fullName>
    <label>Max Char Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>