force-app/main/default/objects/Question_Questionnaire__c/fields/Maximum_value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>