force-app/main/default/objects/Question_Questionnaire__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <description>admin can define the currency format</description>
    <label>Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>