force-app/main/default/objects/Question_Questionnaire__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Set points of the question</description>
    <label>Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>