force-app/main/default/objects/Question_Questionnaire__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Question</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipName>Question_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>