force-app/main/default/objects/Question_Questionnaire__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <description>Set order of the question</description>
    <label>Question Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>