force-app/main/default/objects/Question_Questionnaire__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with Questionnaire</description>
    <label>Questionnaire</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipName>Question_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>