force-app/main/default/objects/Question_Questionnaire__c/fields/Related_To_Column__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Column__c</fullName>
    <description>Define which question is related to particular column.</description>
    <inlineHelpText>Define which question is related to particular column.</inlineHelpText>
    <label>Related To Column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>