force-app/main/default/objects/Question_Questionnaire__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set true/false for question is required or not</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>